@@ -446,6 +446,7 @@ void woopsiInitDefaultGadgetStyle() {
 	defaultGadgetStyle->colours.shadow = woopsiRGB(0, 0, 0);
 	defaultGadgetStyle->colours.fill = woopsiRGB(24, 24, 24);
 	defaultGadgetStyle->colours.dark = woopsiRGB(15, 15, 15);
+	defaultGadgetStyle->colours.text = woopsiRGB(0, 0, 0);
 	defaultGadgetStyle->font = new WoopsiUI::NewTopaz();
 	defaultGadgetStyle->glyphFont = new WoopsiUI::GlyphFont();
 }
